--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -1,9 +1,21 @@
+@inproceedings{Laconte2021,
+	author = {Laconte, J. and Randriamiarintsoa, E. and Kasmi, A. and Pomerleau, F. and Chapuis, R. and Debain, C., Aufrère, R.},
+	booktitle = {Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)},
+	title = {Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments},
+	year = {2021},
+	url = {https://arxiv.org/pdf/2103.04795},
+	author+an = {1=student; 1=pomerleau;},
+	addendum = {FRQNT, NSERC},
+}
+
 @inproceedings{Vaidis2021,
 	author = {Vaidis, M. and  Gigu\`{e}re, P. and Pomerleau, F. and Kubelka, V.},
 	booktitle = {2021 18th Conference on Robots and Vision (CRV)},
 	title = {Accurate outdoor ground truth based on total stations},
 	year = {2021},
 	url = {https://arxiv.org/abs/2104.14396},
+	author+an = {1=student; 1=pomerleau;},
+	addendum = {FRQNT, NSERC},
 }
 
 @inproceedings{Deschenes2021,
@@ -12,6 +24,8 @@
 	title = {Lidar Scan Registration Robust to Extreme Motions},
 	year = {2021},
 	url = {https://arxiv.org/abs/2105.01215},
+	author+an = {1=student; 2=student; 1=pomerleau; 2=pomerleau},
+	addendum = {NSERC},
 }
 
 @misc{Vaidis2020,
@@ -19,13 +33,13 @@
 	journal = {IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control},
 	year = {2020},
 	author={Vaidis, M. and Laconte, J. and Kubelka, V. and Pomerleau, F.},
-	author+an = {1=student; 2=student; 1=pomerleau},
-	note = {accepted September 30}
+	author+an = {1=student; 2=student; 1=pomerleau; 2=pomerleau},
+	addendum = {FRQNT, NSERC},
 }
 @article{Laconte2020,
 	title = {Lambda-Field: A Continuous Counterpart Of The Bayesian Occupancy Grid For Risk Assessment And Safe Navigation},
 	journal = {the International Journal of Robotics Research (IJRR)},
-	year = {2020},
+	year = {2021},
 	author={Laconte, J. and Kasmi, A. and Pomerleau, F. and Chapuis, R. and Malaterre, L. and Debain, C. and Aufrère, R.},
 	author+an = {1=student; 2=student; 1=pomerleau},
 	note = {submitted March 5, Manuscript ID: IJR-20-3838}
@@ -34,12 +48,13 @@
 @article{Chahine2020,
 	title = {Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites},
 	journal = {SN Applied Sciences},
-	year = {2020},
+	year = {2021},
+	volume = {3},
+	issue = {5},
 	author={Chahine, G and Vaidis, M. and Pomerleau, F. and Pradalier, C.},
 	author+an = {1=student; 2=student; 2=pomerleau},
 	addendum = {NSERC},
 	project = {libpointmatcher},
-	note = {submitted October 31}
 }
 
 @article{Kubelka2020,
@@ -85,7 +100,7 @@
 	url={https://www.frontiersin.org/article/10.3389/frobt.2020.572054},
 	doi={10.3389/frobt.2020.572054},
 	issn={2296-9144},
-	abstract={In the context of 3D mapping, larger and larger point clouds are acquired with lidar sensors. Although pleasing to the eye, dense maps are not necessarily tailored for practical applications. For instance, in a surface inspection scenario, keeping geometric information such as the edges of objects is essential to detect cracks, whereas very dense areas of very little information such as the ground could hinder the main goal of the application. Several strategies exist to address this problem by reducing the number of points. However, they tend to underperform with non-uniform density, large sensor noise, spurious measurements, and large-scale point clouds, which is the case in mobile robotics. This paper presents a novel sampling algorithm based on spectral decomposition analysis to derive local density measures for each geometric primitive. The proposed method, called Spectral Decomposition Filter (SpDF), identifies and preserves geometric information along the topology of point clouds and is able to scale to large environments with a non-uniform density. Finally, qualitative and quantitative experiments verify the feasibility of our method and present a large-scale evaluation of SpDF with other seven point cloud sampling algorithms, in the context of the 3D registration problem using the Iterative Closest Point (ICP) algorithm on real-world datasets. Results show that a compression ratio up to 97 % can be achieved when accepting a registration error within the range accuracy of the sensor, here for large scale environments of less than 2 cm.}
+	abstract={In the context of 3D mapping, larger and larger point clouds are acquired with lidar sensors. Although pleasing to the eye, dense maps are not necessarily tailored for practical applications. For instance, in a surface inspection scenario, keeping geometric information such as the edges of objects is essential to detect cracks, whereas very dense areas of very little information such as the ground could hinder the main goal of the application. Several strategies exist to address this problem by reducing the number of points. However, they tend to underperform with non-uniform density, large sensor noise, spurious measurements, and large-scale point clouds, which is the case in mobile robotics. This paper presents a novel sampling algorithm based on spectral decomposition analysis to derive local density measures for each geometric primitive. The proposed method, called Spectral Decomposition Filter (SpDF), identifies and preserves geometric information along the topology of point clouds and is able to scale to large environments with a non-uniform density. Finally, qualitative and quantitative experiments verify the feasibility of our method and present a large-scale evaluation of SpDF with other seven point cloud sampling algorithms, in the context of the 3D registration problem using the Iterative Closest Point (ICP) algorithm on real-world datasets. Results show that a compression ratio up to 97 percent can be achieved when accepting a registration error within the range accuracy of the sensor, here for large scale environments of less than 2 cm.}
 	}
 }
 @misc{Labussiere2019,
@@ -98,20 +113,18 @@
 	project = {libpointmatcher},
 }
 
-@INPROCEEDINGS {Baril2020,
-author = {D. Baril and V. Grondin and S. Deschenes and J. Laconte and M. Vaidis and V. Kubelka and A. Gallant and P. Giguere and F. Pomerleau},
-booktitle = {2020 17th Conference on Computer and Robot Vision (CRV)},
-title = {Evaluation of Skid-Steering Kinematic Models for Subarctic Environments},
-year = {2020},
-volume = {},
-issn = {},
-pages = {198-205},
-keywords = {},
-doi = {10.1109/CRV50864.2020.00034},
-url = {https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034},
-publisher = {IEEE Computer Society},
-address = {Los Alamitos, CA, USA},
-month = {may}
+@inproceedings {Baril2020,
+	author = {D. Baril and V. Grondin and S. Deschenes and J. Laconte and M. Vaidis and V. Kubelka and A. Gallant and P. Giguere and F. Pomerleau},
+	booktitle = {2020 17th Conference on Computer and Robot Vision (CRV)},
+	title = {Evaluation of Skid-Steering Kinematic Models for Subarctic Environments},
+	year = {2020},
+	pages = {198-205},
+	doi = {10.1109/CRV50864.2020.00034},
+	url = {https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034},
+	publisher = {IEEE Computer Society},
+	month = {may},
+	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 1=pomerleau; 3=pomerleau; 4=pomerleau; 5=pomerleau},
+	note = {Best Robotic Vision Paper Award!},
 }
 
 @inproceedings{Roucek2019,
@@ -246,6 +259,8 @@ month = {may}
 	title = {Analysis of Robust Functions for Registration Algorithms},
 	booktitle = {Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)},
 	year = {2019},
+	doi = {10.1109/ICRA.2019.8793791},
+	URL = {https://doi.org/10.1109/ICRA.2019.8793791},
 	author+an = {1=student; 1=pomerleau},
 	author = {Babin, P. and Gigu\`{e}re, P. and Pomerleau, F.},
 	addendum = {FQRNT},
