added FF2021 pub + minor changes

--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -1,3 +1,13 @@
+@misc{Baril2021,
+	title = {Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned},
+	journal = {Arxiv},
+	journal={arXiv preprint arXiv:2111.13981},
+  	year={2021},
+	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 6=student; 1=pomerleau; 2=pomerleau; 3=pomerleau},
+	author = {D. Baril and S. Deschênes and O. Gamache and M. Vaidis and D. LaRocque and J. Laconte and V. Kubelka and P. Giguère and F. Pomerleau},
+	project = {snow},
+}
+
 @inproceedings{Laconte2021,
 	author = {Laconte, J. and Randriamiarintsoa, E. and Kasmi, A. and Pomerleau, F. and Chapuis, R. and Debain, C., Aufrère, R.},
 	booktitle = {Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)},
@@ -16,6 +26,7 @@
 	url = {https://arxiv.org/abs/2104.14396},
 	author+an = {1=student; 1=pomerleau;},
 	addendum = {FRQNT, NSERC},
+	project = {snow},
 }
 
 @inproceedings{Deschenes2021,
@@ -26,6 +37,7 @@
 	url = {https://arxiv.org/abs/2105.01215},
 	author+an = {1=student; 2=student; 1=pomerleau; 2=pomerleau},
 	addendum = {NSERC},
+	project = {libpointmatcher},
 }
 
 @misc{Vaidis2020,
@@ -35,14 +47,6 @@
 	author={Vaidis, M. and Laconte, J. and Kubelka, V. and Pomerleau, F.},
 	author+an = {1=student; 2=student; 1=pomerleau; 2=pomerleau},
 	addendum = {FRQNT, NSERC},
-}
-@article{Laconte2020,
-	title = {Lambda-Field: A Continuous Counterpart Of The Bayesian Occupancy Grid For Risk Assessment And Safe Navigation},
-	journal = {the International Journal of Robotics Research (IJRR)},
-	year = {2021},
-	author={Laconte, J. and Kasmi, A. and Pomerleau, F. and Chapuis, R. and Malaterre, L. and Debain, C. and Aufrère, R.},
-	author+an = {1=student; 2=student; 1=pomerleau},
-	note = {submitted March 5, Manuscript ID: IJR-20-3838}
 }
 
 @article{Chahine2020,
@@ -125,6 +129,7 @@
 	month = {may},
 	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 1=pomerleau; 3=pomerleau; 4=pomerleau; 5=pomerleau},
 	note = {Best Robotic Vision Paper Award!},
+	project = {snow},
 }
 
 @inproceedings{Roucek2019,
