update biblio and Mike's page

--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -1,11 +1,11 @@
-@misc{Baril2021,
+@article{Baril2021,
 	title = {Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned},
-	journal = {Arxiv},
-	journal={arXiv preprint arXiv:2111.13981},
+	journal = {Field Robotics},
   	year={2021},
 	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 6=student; 1=pomerleau; 2=pomerleau; 3=pomerleau},
 	author = {D. Baril and S. Deschênes and O. Gamache and M. Vaidis and D. LaRocque and J. Laconte and V. Kubelka and P. Giguère and F. Pomerleau},
 	project = {snow},
+	note = {Major revision, ID FR-21-0050, arXiv preprint arXiv:2111.13981}
 }
 
 @article{laconte2021novel,
@@ -56,6 +56,27 @@
 	author={Vaidis, M. and Laconte, J. and Kubelka, V. and Pomerleau, F.},
 	author+an = {1=student; 2=student; 1=pomerleau; 2=pomerleau},
 	addendum = {FRQNT, NSERC},
+}
+
+@misc{Furgale2014,
+	title = {There and Back Again–-Dealing with highly-dynamic scenes and long-term change during topological/metric route following},
+	journal = {ICRA14 Workshop on Modelling, Estimation, Perception, and Control of All Terrain Mobile Robots},
+	year = {2014},
+	author={Furgale, P. and Krüsi, P. and  Pomerleau, F. and Schwesinger, U. and  Colas, F. and Siegwart, R.},
+}
+
+@misc{Triebel2009,
+	title = {Key Technologies for Intelligent and Safer Cars–from Motion Estimation to Predictive Motion Planning},
+	journal = {Workshop on Planning, Perception and Navigation for Intelligent Vehicles (PPNIV)},
+	year = {2009},
+	author={Triebel, Rudolph and Scaramuzza, Davide and Rufli, Martin and Spinello, Luciano and Pomerleau, Francois and Siegwart, Roland},
+}
+
+@misc{Sturm2011,
+	title = {Towards a benchmark for RGB-D SLAM evaluation},
+	journal = {Workshop on advanced reasoning with depth cameras at Robotics: Science and Systems (RSS)},
+	year = {2011},
+	author={Sturm, Jürgen and Magnenat, Stéphane and Engelhard, Nikolas and Pomerleau, François and Colas, Francis and Cremers, Daniel and Siegwart, Roland and Burgard, Wolfram},
 }
 
 @article{Chahine2020,
