--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -1,29 +1,121 @@
-@article{Baril2021,
+% READ ME before modifying
+% - New articles goes at the beginning of this file
+% - For common conferences, use the same name as other entries
+% - Use the tag 
+%     url={} to the publisher link
+%     note={} to write the status of the paper {Submitted, Major revision, Minor revision, arXiv preprint arXiv:XXXX.XXXXX}
+%     project={} to precise if the publication is related to a project of the lab (custom tag for website)
+%     author+an={} to precise who is a student/trainee and who is the supervisor. Ex. author+an={1=student; 2=student; 2=pomerleau} means
+%                  that the first and second author are students ans that the second author is supervised by Francois Pomerleau (custom tag for FRQ and NSERC)
+%     addendum={} to precise the funding agencies (used for FRQ and NSERC proposal)
+% - You can add your the pdf version of your article in the folder './pdf/', with the name of the file being the same as the key used ex., Babin2019a.pdf
+% - You can add you slides as pdf in the same folder, with the name using the key ex., Babin2019a.slides.pdf
+
+
+@Inbook{Pomerleau2022,
+    author="Pomerleau, François",
+    editor="Ang, Marcelo H and Khatib, Oussama and Siciliano, Bruno",
+    title="Robotics in Snow and Ice",
+    bookTitle="Encyclopedia of Robotics",
+    year="2022",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="1--6",
+	project = {snow},
+    note = {Major revision}
+}
+
+@article{Grondin2022,
+	title = {Tree Detection and Diameter Estimation Based on Deep Learning},
+	journal = {Forestry: An International Journal of Forest Research},
+  	year={2022},
+	author = {Grondin, Vincent and Fortin, Jean-Michel and Pomerleau, François and Giguère, Philippe},
+	author+an = {1=student; 2=student;},
+	project = {forestry},
+	addendum = {NSERC},
+	note = {Major revision, ID Forestry-2022-059}
+}
+
+@inproceedings{Kubelka2022,
+  title = {Gravity-constrained point cloud registration},
+  author = {Kubelka, Vladimír and Vaidis, Maxime and Pomerleau, François},
+  author+an = {2=student; 2=pomerleau;},
+  booktitle = {Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)},
+  doi = {10.48550/ARXIV.2203.13799},
+  url = {https://arxiv.org/abs/2203.13799},
+  publisher = {arXiv},
+  year = {2022},  
+  project = {darpa, snow},
+  note = {Accepted for oral presentation, arXiv preprint arXiv:2203.01902}
+}
+
+
+@inproceedings{Fortin2022,
+  title = {Instance Segmentation for Autonomous Log Grasping in Forestry Operations},
+  author = {Fortin, Jean-Michel and Gamache, Olivier and Grondin, Vincent and Pomerleau, François and Giguère, Philippe},
+  author+an = {1=student; 2=student; 3=student;},
+  booktitle = {Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)},
+  doi = {10.48550/ARXIV.2203.01902},
+  url = {https://arxiv.org/abs/2203.01902},
+  publisher = {arXiv},
+  year = {2022},
+  note = {Finalist for Best Paper Award on Agri-Robotics! Accepted for oral presentation, arXiv preprint arXiv:2203.01902}
+}
+
+@article{Baril2022,
 	title = {Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned},
 	journal = {Field Robotics},
-  	year={2021},
-	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 6=student; 1=pomerleau; 2=pomerleau; 3=pomerleau},
-	author = {D. Baril and S. Deschênes and O. Gamache and M. Vaidis and D. LaRocque and J. Laconte and V. Kubelka and P. Giguère and F. Pomerleau},
+  	year={2022},
+	author = {Dominic Baril and Simon-Pierre Deschênes and O. Gamache and M. Vaidis and D. LaRocque and J. Laconte and V. Kubelka and P. Giguère and F. Pomerleau},
+	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 6=student; 7=student; 1=pomerleau; 2=pomerleau; 3=pomerleau},
 	project = {snow},
-	note = {Major revision, ID FR-21-0050, arXiv preprint arXiv:2111.13981}
+	note = {Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981}
+}
+
+@article{Roucek2021,
+    title = {System for multi-robotic exploration of underground environments {CTU-CRAS-NORLAB} in the {DARPA} Subterranean Challenge},
+	journal = {Field Robotics},
+    author = {Rouček, Tomáš and Pecka, Martin and Čížek, Petr and Petříček, Tomáš and Bayer, Jan and Šalanský, Vojtěch and Azayev, Teymur and Heřt, Daniel and Petrlík, Matěj and Báča, Tomáš and Spurný, Vojtěch and Krátký, Vít and Petráček, Pavel and Baril, Dominic and Vaidis, Maxime and Kubelka, Vladimír and Pomerleau, François and Faigl, Jan and Zimmermann, Karel and Saska, Martin and Svoboda, Tomáš and Krajník, Tomáš},
+    doi = {10.48550/ARXIV.2110.05911},
+    url = {https://arxiv.org/abs/2110.05911},
+    year = {2021},
+	project = {darpa},
+	note = {Accepted June 28 2021, ID FR-21-0003.R1, arXiv preprint arXiv:2110:05911}
+}
+
+
+%------------------------------------------------------------
+% Stable articles go down this line
+
+@misc{Grondin2022a,
+	title = {Training Deep Learning Algorithms on Synthetic Forest Images for Tree Detection},
+	journal = {ICRA 2022 Workshop - Innovation in Forestry Robotics: Research and Industry Adoption},
+	year = {2022},
+	author={Grondin, Vincent and Pomerleau, François and Giguère, Philippe},
+	author+an = {1=student;},
+	addendum = {NSERC}, 
 }
 
 @article{laconte2021novel,
   title={A Novel Occupancy Mapping Framework for Risk-Aware Path Planning in Unstructured Environments},
   author={Laconte, Johann and Kasmi, Abderrahim and Pomerleau, Fran{\c{c}}ois and Chapuis, Roland and Malaterre, Laurent and Debain, Christophe and Aufr{\`e}re, Romuald},
+  author+an = {1=student; 2=student; 1=pomerleau},
   journal={Sensors},
   volume={21},
   number={22},
   pages={7562},
   year={2021},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={Multidisciplinary Digital Publishing Institute},
+  addendum = {CAP 20-25 PhD Mentoring}
 }
 
 @inproceedings{laconte2021dynamic,
   title={Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments},
   author={Laconte, Johann and Randriamiarintsoa, Elie and Kasmi, Abderrahim and Pomerleau, Fran{\c{c}}ois and Chapuis, Roland and Debain, Christophe and Aufr{\`e}re, Romuald},
+  author+an = {1=student; 2=student; 3=student; 1=pomerleau},
   booktitle = {Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)},
-  year={2021}
+  year={2021},
+  addendum = {CAP 20-25 PhD Mentoring}
 }
 
 @inproceedings{Vaidis2021,
@@ -32,7 +124,7 @@
 	title = {Accurate outdoor ground truth based on total stations},
 	year = {2021},
 	url = {https://arxiv.org/abs/2104.14396},
-	author+an = {1=student; 1=pomerleau;},
+	author+an = {1=student; 4=student; 1=pomerleau; 4=pomerleau},
 	addendum = {FRQNT, NSERC},
 	project = {snow},
 }
@@ -116,8 +208,8 @@
 	addendum = {Mitacs Accelerate},
 	keywords = {cylinder fitting, field robotics, forestry, ICP, lidar, mapping, registration},
 	note = {Special issue: Field and Service Robotics},
-	doi = {10.1002/rob.21980},url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21980},
-	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.21980},
+	doi = {10.1002/rob.21980},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21980},
 	abstract = {Forestry is a major industry in many parts of the world, yet this potential domain of application area has been overlooked by the robotics community. For instance, forest inventory, a cornerstone of efficient and sustainable forestry, is still traditionally performed manually by qualified professionals. The lack of automation in this particular task, consisting chiefly of measuring tree attributes, limits its speed, and, therefore, the area that can be economically covered. To this effect, we propose to use recent advancements in three-dimensional mapping approaches in forests to automatically measure tree diameters from mobile robot observations. While previous studies showed the potential for such technology, they lacked a rigorous analysis of diameter estimation methods in challenging and large-scale forest environments. Here, we validated multiple diameter estimation methods, including two novel ones, in a new publicly-available dataset which includes four different forest sites, 11 trajectories, totaling 1458 tree observations, and 14,000 m2. From our extensive validation, we concluded that our mapping method is usable in the context of automated forest inventory, with our best diameter estimation method yielding a root mean square error of 3.45 cm for our whole dataset and 2.04 cm in ideal conditions consisting of mature forest with well-spaced trees. Furthermore, we release this dataset to the public (https://norlab.ulaval.ca/research/montmorencydataset), to spur further research in robotic forest inventories. Finally, stemming from this large-scale experiment, we provide recommendations for future deployments of mobile robots in a forestry context.}
 }
 
