--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -11,8 +11,7 @@
 % - You can add your the pdf version of your article in the folder './pdf/', with the name of the file being the same as the key used ex., Babin2019a.pdf
 % - You can add you slides as pdf in the same folder, with the name using the key ex., Babin2019a.slides.pdf
 
-
-@Inbook{Pomerleau2022, 
+@Inbook{Pomerleau2022,
     author="Pomerleau, François",
     editor="Ang, Marcelo H and Khatib, Oussama and Siciliano, Bruno",
     title="Robotics in Snow and Ice",
@@ -62,15 +61,6 @@
   note = {Finalist for Best Paper Award on Agri-Robotics! Accepted for oral presentation, arXiv preprint arXiv:2203.01902}
 }
 
-@article{Baril2022,
-	title = {Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned},
-	journal = {Field Robotics},
-  	year={2022},
-	author = {Dominic Baril and Simon-Pierre Deschênes and O. Gamache and M. Vaidis and D. LaRocque and J. Laconte and V. Kubelka and P. Giguère and F. Pomerleau},
-	author+an = {1=student; 2=student; 3=student; 4=student; 5=student; 6=student; 7=student; 1=pomerleau; 2=pomerleau; 3=pomerleau},
-	project = {snow},
-	note = {Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981}
-}
 
 @article{Roucek2021,
     title = {System for multi-robotic exploration of underground environments {CTU-CRAS-NORLAB} in the {DARPA} Subterranean Challenge},
@@ -86,6 +76,25 @@
 
 %------------------------------------------------------------
 % Stable articles go down this line
+
+@article{Baril2022,
+	archivePrefix = {arXiv},
+	arxivId = {2111.13981},
+	author = {Baril, Dominic and Desch{\^{e}}nes, Simon-Pierre and Gamache, Olivier and Vaidis, Maxime and LaRocque, Damien and Laconte, Johann and Kubelka, Vladim{\'{i}}r and Gigu{\`{e}}re, Philippe and Pomerleau, Fran{\c{c}}ois},
+	doi = {10.55417/fr.2022050},
+	eprint = {2111.13981},
+	issn = {27713989},
+	journal = {Field Robotics},
+	keywords = {extreme environments,gps-denied operation,navigation,slam,winter},
+	month = {mar},
+	number = {1},
+	pages = {1628--1660},
+	title = {{Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned}},
+	url = {https://fieldrobotics.net/Field_Robotics/Volume_2_files/Vol2_50.pdf},
+	volume = {2},
+	year = {2022},
+	note = {Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981}
+}
 
 @misc{Grondin2022a,
 	title = {Training Deep Learning Algorithms on Synthetic Forest Images for Tree Detection},
