Added research about RTS and modify Maxime Vaidis page

--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -11,6 +11,18 @@
 % - You can add your the pdf version of your article in the folder './pdf/', with the name of the file being the same as the key used ex., Babin2019a.pdf
 % - You can add you slides as pdf in the same folder, with the name using the key ex., Babin2019a.slides.pdf
 
+@inproceedings{Vaidis2022,
+	title = {Extrinsic calibration for highly accurate trajectories reconstruction},
+	author = {Vaidis, Maxime and Dubois, William and Guénette, Alexandre and Laconte, Johann and Kubelka, Vladim{\'{i}}r and Pomerleau, Fran{\c{c}}ois},
+	author+an = {1=student; 2=student; 3=student; 6=pomerleau},
+	booktitle = {Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)},
+	url = {https://arxiv.org/abs/2210.01048},
+	publisher = {arXiv},
+	year={2023},
+	project = {rts},
+	note = {Submitted to ICRA 2023}
+}
+
 @Inbook{Pomerleau2022,
     author="Pomerleau, François",
     editor="Ang, Marcelo H and Khatib, Oussama and Siciliano, Bruno",
@@ -135,7 +147,7 @@
 	url = {https://arxiv.org/abs/2104.14396},
 	author+an = {1=student; 4=student; 1=pomerleau; 4=pomerleau},
 	addendum = {FRQNT, NSERC},
-	project = {snow},
+	project = {snow, rts},
 }
 
 @inproceedings{Deschenes2021,
@@ -157,6 +169,7 @@
 	author={Vaidis, M. and Laconte, J. and Kubelka, V. and Pomerleau, F.},
 	author+an = {1=student; 2=student; 1=pomerleau; 2=pomerleau},
 	addendum = {FRQNT, NSERC},
+	doi = {10.1109/CRV52889.2021.00012},
 }
 
 @misc{Furgale2014,
