--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -25,15 +25,16 @@
 
 @Inbook{Pomerleau2022,
     author="Pomerleau, François",
-    editor="Ang, Marcelo H and Khatib, Oussama and Siciliano, Bruno",
     title="Robotics in Snow and Ice",
     bookTitle="Encyclopedia of Robotics",
+	doi = {10.1007/978-3-642-41610-1_223-1},
+	url = {https://doi.org/10.1007/978-3-642-41610-1_223-1},
     year="2022",
     publisher="Springer Berlin Heidelberg",
+    editor="Ang, Marcelo H and Khatib, Oussama and Siciliano, Bruno",
     address="Berlin, Heidelberg",
-    pages="1--6",
+    pages="1--9",
 	project = {snow},
-    note = {Major revision}
 }
 
 @article{Grondin2022,
