--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -12,6 +12,19 @@
 % - You can add your the pdf version of your article in the folder './pdf/', with the name of the file being the same as the key used ex., Babin2019a.pdf
 % - You can add you slides as pdf in the same folder, with the name using the key ex., Babin2019a.slides.pdf
 
+@inproceedings{Deschenes2024,
+	author = {Desch\^{e}nes, S.-P. and Baril, D. and Boxan, M. and Laconte, J. and Gigu\`{e}re, P. and Pomerleau, F.},
+	booktitle = {Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)},
+	title = {Saturation-Aware Angular Velocity Estimation: Extending the Robustness of SLAM to Aggressive Motions},
+	year = {2024},
+	url = {https://arxiv.org/abs/2310.07844},
+	note = {Submitted},
+	project = {snow},
+	author+an = {1=student; 2=student; 3=student; 4=pomerleau; 5=pomerleau; 6=pomerleau},
+	addendum={FRQNT, NSERC},
+	location={Yokohama, Japan},
+}
+
 @article{Ebadi2022, 
 	title = {Present and Future of SLAM in Extreme Underground Environments},
 	author = {Kamak Ebadi and 
