Add Matej's personal page

--- a/_bibliography/norlab.bib
+++ b/_bibliography/norlab.bib
@@ -25,6 +25,49 @@
 	location={Yokohama, Japan},
 }
 
+@article{Ebadi2022, 
+	title = {Present and Future of SLAM in Extreme Underground Environments},
+	author = {Kamak Ebadi and 
+	Lukas Bernreiter and 
+	Harel Biggie and 
+	Gavin Catt and 
+	Yun Chang and 
+	Arghya Chatterjee and 
+	Christopher E Denniston and 
+	Simon-Pierre Deschênes and 
+	Kyle Harlow and 
+	Shehryar Khattak and 
+	Lucas Nogueira and 
+	Matteo Palieri and 
+	Pavel Petráček and 
+	Matěj Petrlík and 
+	Andrzej Reinke and 
+	Krátk´ Krátk´y and 
+	Shibo Zhao and 
+	Ali -Akbar Agha-Mohammadi and 
+	Kostas Alexis and 
+	Christoffer Heckman and 
+	Kasra Khosoussi and 
+	Navinda Kottege and 
+	Benjamin Morrell and 
+	Marco Hutter and 
+	Fred Pauling and 
+	François Pomerleau and 
+	Martin Saska and 
+	Sebastian Scherer and 
+	Roland Siegwart and 
+	Jason L Williams and 
+	Luca Carlone},
+	author+an = {1=student; 2=student; 3=student;  4=student; 5=student; 6=student; 7=student; 8=student; 9=student; 10=student; 11=student; 12=student; 13=student; 14=student; 15=student; 16=student; 17=student; 8=pomerleau},
+	doi = {10.48550/arxiv.2208.01787},
+	journal = {IEEE Transactions on Robotics (T-RO)},
+	month = {8},
+	year = {2022},
+	project = {darpa},
+	note = {Accepted with major review on Jan. 2023, ID: IEEE T-RO 22-0745},
+	addendum = {DARPA, NSERC},
+}
+
 @inproceedings{Vaidis2023b,
 	title = {Uncertainty analysis for accurate reference trajectories with robotic total stations},
 	author = {Vaidis, Maxime and Dubois, William and Daum, Effie and LaRocque, Damien and Pomerleau, Fran{\c{c}}ois},
@@ -62,49 +105,6 @@
 
 %------------------------------------------------------------
 % Stable articles go down this line
-
-@article{Ebadi2023, 
-	title = {Present and Future of SLAM in Extreme Environments: The DARPA SubT Challenge},
-	author = {Kamak Ebadi and 
-	Lukas Bernreiter and 
-	Harel Biggie and 
-	Gavin Catt and 
-	Yun Chang and 
-	Arghya Chatterjee and 
-	Christopher E Denniston and 
-	Simon-Pierre Deschênes and 
-	Kyle Harlow and 
-	Shehryar Khattak and 
-	Lucas Nogueira and 
-	Matteo Palieri and 
-	Pavel Petráček and 
-	Matěj Petrlík and 
-	Andrzej Reinke and 
-	Vít Krátký and 
-	Shibo Zhao and 
-	Ali-Akbar Agha-Mohammadi and 
-	Kostas Alexis and 
-	Christoffer Heckman and 
-	Kasra Khosoussi and 
-	Navinda Kottege and 
-	Benjamin Morrell and 
-	Marco Hutter and 
-	Fred Pauling and 
-	François Pomerleau and 
-	Martin Saska and 
-	Sebastian Scherer and 
-	Roland Siegwart and 
-	Jason L Williams and 
-	Luca Carlone},
-	author+an = {1=student; 2=student; 3=student;  4=student; 5=student; 6=student; 7=student; 8=student; 9=student; 10=student; 11=student; 12=student; 13=student; 14=student; 15=student; 16=student; 17=student; 18=pomerleau},
-	doi = {10.1109/TRO.2023.3323938},
-	journal = {IEEE Transactions on Robotics (T-RO)},
-	month = {10},
-	year = {2023},
-	url = {https://ieeexplore.ieee.org/document/10286080},
-	project = {darpa},
-	addendum = {DARPA, NSERC},
-}
 
 @misc{Deschenes2023,
 	title = {Lidar Scan Registration Robust to Extreme Motions},
